--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "autoprefixer": "^10.0.1",
     "encoding": "^0.1.13",
     "postcss": "^8",
-    "tailwindcss": "^3.3.0"
+    "tailwindcss": "^3.3.0",
+    "tailwindcss-unsplash": "^1.1.1"
   }
 }
